feat: [CI-6093]: Refactor CI plan creator to use specific plan creators for each node / Remove use of yaml updates (#39948)